# MediaplayerServer

./: CMakeLists.txt  README.md
conf/: README  com.hsae.mediaplayerserver.xml  media.ini  mediaplayer.service
doc/: Media服务接口设计.xlsx  时序.RTF  类图.RTF  需求.RTF
include/: DBusCallbacks.h  IMediaInfo.h  IMediaPlayer.h  IMediaplayerCallbacks.h  MediaInfo.h  MediaPlayer.h  MyElement.h
include/utility/: GDBusMediaplayerServer.h  ILog.h  Log.h  LogJenDebug.h  LogSyslog.h  gst-discoverer.h
src/: DBusCallbacks.cpp  MediaInfo.cpp  MediaPlayer.cpp  MyElement.cpp  main.cpp
src/utility/: GDBusMediaplayerServer.c  Log.cpp  LogJenDebug.cpp  LogSyslog.cpp  gst-discoverer.c
