PROJECT(mediaplayerserver)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#if(NOT DEFINED ENV{SDKTARGETSYSROOT})
    # 没有找到SDKTARGETSYSROOT境变量
#    MESSAGE(FATAL_ERROR "not defined environment variable:SDKTARGETSYSROOT")
#endif()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-write-strings -ggdb -std=c++0x")
SET(SDKTARGETSYSROOT $ENV{SDKTARGETSYSROOT})
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET(CMAKE_VERBOSE_MAKEFILE on)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_SEARCH_MODULE(GSTREAMER REQUIRED gstreamer-1.0)
PKG_SEARCH_MODULE(GIOUNIX REQUIRED gio-unix-2.0)

INCLUDE_DIRECTORIES(./include
                    ${CMAKE_SOURCE_DIR}/include/utility/
                    ${GSTREAMER_INCLUDE_DIRS}
                    ${GIOUNIX_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
    ${GSTREAMER_LIBRARY_DIRS}
)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/src/utility/ UTILITY_LIST)

ADD_EXECUTABLE(${PROJECT_NAME} ${SRC} ${UTILITY_LIST})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} PUBLIC gstpbutils-1.0 ${GSTREAMER_LIBRARIES} ${GIOUNIX_LIBRARIES} pthread )
TARGET_COMPILE_OPTIONS(${PROJECT_NAME} PUBLIC ${GSTREAMER_CFLAGS_OTHER} ${GIOUNIX_CFLAGS_OTHER})

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")

